--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=eventBooking
 
+spring.profiles.active=dev
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -17,9 +19,11 @@ spring.h2.console.settings.web-allow-others=false
 
 logging.level.com.digicore=trace
 
-event.booking.securityJWTKeyStorePath= keys/keystore.jks
-event.booking.securityJWTKeyStorePassword: ${JWT_PASSWORD:password}
-event.booking.securityJWTKeyAlias:jwtsigning
-event.booking.securityJWTPrivateKeyPassphrase: ${JWT_PRIVATE_KEY_PARAPHRASE:password}
-event.booking.loginAttemptMaxCount: 10
-event.booking.loginAttemptAutoUnlockDuration: 30
+
+springdoc.swagger-ui.path=/documentation/doc-ui.html
+springdoc.swagger-ui.url=/documentation/v3/api-docs
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.configUrl=/documentation/v3/api-docs/swagger-config
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.api-docs.path=/documentation/v3/api-docs
