--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ springdoc.swagger-ui.configUrl=/documentation/v3/api-docs/swagger-config
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.api-docs.path=/documentation/v3/api-docs
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
