Event Booking Application completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=eventBooking
 
-spring.profiles.active=dev
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -17,7 +15,6 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
-logging.level.com.digicore=trace
 
 
 springdoc.swagger-ui.path=/documentation/doc-ui.html
@@ -28,6 +25,19 @@ springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.api-docs.path=/documentation/v3/api-docs
 
+
+# SMTP server configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=*****
+spring.mail.password=*****
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
 
